# youtrack-with-gitlab-integration

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yaml  settings.yaml
app/src/: main.rs  settings.rs
app/src/api/: mod.rs
app/src/service/: grok_service.rs  mod.rs  pattern_builder_service.rs  webhook_service.rs  youtrack_service.rs
sdk/git-tools/: Cargo.toml
sdk/gitlab-tools/: Cargo.toml
sdk/gitlab-tools/rest/merge_request/: merge_reqeust.merge_after_pipeline.event.json  merge_reqeust.merge_after_pipeline.json  merge_request.closed.event.json  merge_request.closed.json  merge_request.example.json  merge_request.merge.event.json  merge_request.real.full.json  merge_request.real.json
sdk/gitlab-tools/rest/note/: note.addComment.body.json  note.addComment.event.json  note.example.json
sdk/gitlab-tools/src/: gitlab_api_eperiments.rs  lib.rs
sdk/gitlab-tools/src/models/hooks/: base.rs  merge_request.rs  mod.rs  note.rs  pipeline.rs
sdk/utils/env-utils/: Cargo.toml
sdk/utils/env-utils/src/: lib.rs
sdk/utils/git-utils/: Cargo.toml
sdk/utils/web-utils/: Cargo.toml
sdk/utils/web-utils/src/: lib.rs
sdk/youtrack-tools/: Cargo.toml  README.md
sdk/youtrack-tools/rest/: tag.new.post.json  youtrack.postman_collection.json
sdk/youtrack-tools/rest/issue/: issue.query.md  issueGetter.json
sdk/youtrack-tools/src/: lib.rs
sdk/youtrack-tools/src/rest_api/: base.rs  client.rs  error.rs  issue.rs  mod.rs  project.rs  tag.rs  task.rs  user.rs  youtrack_const.rs
sdk/youtrack-tools/src/rest_api/base/: client.rs
sdk/youtrack-tools/src/rest_api/json_models/: customFiledSettings.json  issue.json  issue.rs  mod.rs  project.rs  user.rs
sdk/youtrack-tools/src/rest_api/service/: issues.rs  mod.rs  tags.rs
workflow/: README.md  docker-compose.yaml  index.js  package.json
workflow/objects/: ctx.json  issue.fields.json  issue.fileds.State.json  issue.json  pos.issues.id.fields.id.json
