[package]
name = "youtrack-tools"
version = "0.1.0"
authors = ["Sergey <som>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "*"
tokio = "*"
async-trait = "0.1.42"

# serde
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "*"
